// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен корректно отрендерится 1`] = `
<Fragment>
  <div
    className="CardGroupListingItem__dealerInfo"
  >
    <Link
      className="CardGroupListingItemFooter__dealerName"
      metrika="listing,go_to_diler"
      target="_blank"
      url="https://auto.ru/diler-oficialniy/cars/all/avtomir_moskva_mitsubishi_103/?from=auto-snippet"
    >
      Автомир MITSUBISHI Крылатское
    </Link>
    <Link
      className="CardGroupListingItemFooter__dealerRegion"
      metrika="cars,card,show-map,new"
      metrikaGoal="SHOW_ADDRESS"
    >
      <MetroListPlace
        geo={
          Object {
            "gidsInfo": undefined,
            "radius": undefined,
            "shouldShowGeoRadiusExceeded": undefined,
          }
        }
        nowrap={true}
        offer={
          Object {
            "additional_info": Object {},
            "category": "cars",
            "color_hex": 200204,
            "documents": Object {
              "year": 2019,
            },
            "price_info": Object {
              "RUR": 2260700,
            },
            "salon": Object {
              "is_official": true,
            },
            "seller": Object {
              "location": Object {
                "region_info": Object {
                  "name": "Москва",
                },
              },
              "name": "Автомир MITSUBISHI Крылатское",
            },
            "vehicle_info": Object {
              "availability": "IN_STOCK",
            },
          }
        }
        showAddress={true}
        showDistanceFromSelectedCity={true}
      />
    </Link>
  </div>
  <div
    className="CardGroupListingItem__buttons"
  >
    <tradeInMock
      className="CardGroupListingItem__button"
      color="gray"
      offer={
        Object {
          "additional_info": Object {},
          "category": "cars",
          "color_hex": 200204,
          "documents": Object {
            "year": 2019,
          },
          "price_info": Object {
            "RUR": 2260700,
          },
          "salon": Object {
            "is_official": true,
          },
          "seller": Object {
            "location": Object {
              "region_info": Object {
                "name": "Москва",
              },
            },
            "name": "Автомир MITSUBISHI Крылатское",
          },
          "vehicle_info": Object {
            "availability": "IN_STOCK",
          },
        }
      }
      title="Купить в трейд-ин"
    />
  </div>
  <CardGroupListingItemPhoneButton
    className="CardGroupListingItem__contactButton"
  />
</Fragment>
`;

exports[`должен корректно отрендерится с кнопкой обратного звонка 1`] = `
<Fragment>
  <div
    className="CardGroupListingItem__dealerInfo"
  >
    <Link
      className="CardGroupListingItemFooter__dealerName"
      metrika="listing,go_to_diler"
      target="_blank"
      url="https://auto.ru/diler-oficialniy/cars/all/avtomir_moskva_mitsubishi_103/?from=auto-snippet"
    >
      Автомир MITSUBISHI Крылатское
    </Link>
    <Link
      className="CardGroupListingItemFooter__dealerRegion"
      metrika="cars,card,show-map,new"
      metrikaGoal="SHOW_ADDRESS"
    >
      <MetroListPlace
        geo={
          Object {
            "gidsInfo": undefined,
            "radius": undefined,
            "shouldShowGeoRadiusExceeded": undefined,
          }
        }
        nowrap={true}
        offer={
          Object {
            "additional_info": Object {},
            "category": "cars",
            "color_hex": 200204,
            "documents": Object {
              "year": 2019,
            },
            "price_info": Object {
              "RUR": 2260700,
            },
            "salon": Object {
              "is_official": true,
            },
            "seller": Object {
              "location": Object {
                "region_info": Object {
                  "name": "Москва",
                },
              },
              "name": "Автомир MITSUBISHI Крылатское",
            },
            "seller_type": "COMMERCIAL",
            "vehicle_info": Object {
              "availability": "IN_STOCK",
            },
          }
        }
        showAddress={true}
        showDistanceFromSelectedCity={true}
      />
    </Link>
  </div>
  <div
    className="CardGroupListingItem__buttons"
  >
    <tradeInMock
      className="CardGroupListingItem__button"
      color="gray"
      offer={
        Object {
          "additional_info": Object {},
          "category": "cars",
          "color_hex": 200204,
          "documents": Object {
            "year": 2019,
          },
          "price_info": Object {
            "RUR": 2260700,
          },
          "salon": Object {
            "is_official": true,
          },
          "seller": Object {
            "location": Object {
              "region_info": Object {
                "name": "Москва",
              },
            },
            "name": "Автомир MITSUBISHI Крылатское",
          },
          "seller_type": "COMMERCIAL",
          "vehicle_info": Object {
            "availability": "IN_STOCK",
          },
        }
      }
      title="Купить в трейд-ин"
    />
  </div>
  <CardGroupListingItemPhoneButton
    className="CardGroupListingItem__contactButton"
  />
</Fragment>
`;

exports[`не должен рендерить кнопку обратного звонка, если для этого салона обратные звонки запрещены 1`] = `
<Fragment>
  <div
    className="CardGroupListingItem__dealerInfo"
  >
    <Link
      className="CardGroupListingItemFooter__dealerName"
      metrika="listing,go_to_diler"
      target="_blank"
      url="https://auto.ru/diler-oficialniy/cars/all/avtomir_moskva_mitsubishi_103/?from=auto-snippet"
    >
      Автомир MITSUBISHI Крылатское
    </Link>
    <Link
      className="CardGroupListingItemFooter__dealerRegion"
      metrika="cars,card,show-map,new"
      metrikaGoal="SHOW_ADDRESS"
    >
      <MetroListPlace
        geo={
          Object {
            "gidsInfo": undefined,
            "radius": undefined,
            "shouldShowGeoRadiusExceeded": undefined,
          }
        }
        nowrap={true}
        offer={
          Object {
            "additional_info": Object {},
            "category": "cars",
            "color_hex": 200204,
            "documents": Object {
              "year": 2019,
            },
            "price_info": Object {
              "RUR": 2260700,
            },
            "salon": Object {
              "is_official": true,
              "phone_callback_forbidden": true,
            },
            "seller": Object {
              "location": Object {
                "region_info": Object {
                  "name": "Москва",
                },
              },
              "name": "Автомир MITSUBISHI Крылатское",
            },
            "seller_type": "COMMERCIAL",
            "vehicle_info": Object {
              "availability": "IN_STOCK",
            },
          }
        }
        showAddress={true}
        showDistanceFromSelectedCity={true}
      />
    </Link>
  </div>
  <div
    className="CardGroupListingItem__buttons"
  >
    <tradeInMock
      className="CardGroupListingItem__button"
      color="gray"
      offer={
        Object {
          "additional_info": Object {},
          "category": "cars",
          "color_hex": 200204,
          "documents": Object {
            "year": 2019,
          },
          "price_info": Object {
            "RUR": 2260700,
          },
          "salon": Object {
            "is_official": true,
            "phone_callback_forbidden": true,
          },
          "seller": Object {
            "location": Object {
              "region_info": Object {
                "name": "Москва",
              },
            },
            "name": "Автомир MITSUBISHI Крылатское",
          },
          "seller_type": "COMMERCIAL",
          "vehicle_info": Object {
            "availability": "IN_STOCK",
          },
        }
      }
      title="Купить в трейд-ин"
    />
  </div>
  <CardGroupListingItemPhoneButton
    className="CardGroupListingItem__contactButton"
  />
</Fragment>
`;
